[package]
name = "rusttp"
version = "0.1.0"
authors = ["Nguyen Anh Tien <nguyen.anh.tien@framgia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
